# filesampler

./: .Rbuildignore  .gitignore  .travis.yml  CONTRIBUTING.md  ChangeLog  DESCRIPTION  LICENSE  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: file_sample_exact.r  file_sample_prob.r  filesampler-package.r  lineSampler-package.r  reactor.r  readers.r  sample_csv.r  sample_lines.r  utils.r  wc.r
inst/: CITATION
inst/benchmarks/: .gitignore  README  makebig  sampler.r  wc.r
inst/rawdata/: small.csv
man/: LS_sample_exact.Rd  LS_sample_prob.Rd  file_sample_exact.Rd  file_sample_prob.Rd  file_sample_prop.Rd  file_sampler.Rd  file_sampler_exact.Rd  filesampler.Rd  lineSampler.Rd  print-wc.Rd  readLines_sampled.Rd  read_csv_sampled.Rd  sample_csv.Rd  sample_file_exact.Rd  sample_file_prob.Rd  sample_lines.Rd  wc.Rd
src/: Makevars  Makevars.in  Rfilesampler.h  file_sampler.c  filesampler_native.c  interrupt.c  lineSampler.h  lineSampler_native.c  rand.h  samplers.c  wc.c  wrapper.c  wrappers.c
src/filesampler/: Makefile  check_avx.h  error.h  file_sampler.c  filesampler.h  rebalance.c  utils.h  utils_sample.h  wc.c
src/lineSampler/: Makefile  error.c  error.h  file_sampler.c  lineSampler.h  utils.h  utils_sample.h  wc.c
tests/: bad_args.r  exact.R  nmax.r  prop.R  read_csv.R  read_csv.r  read_csv_exact.R  read_csv_proportional.R  wc.R
vignettes/: build_pdf.sh  filesampler.Rnw  lineSampler.Rmd  lineSampler.Rnw  lineSampler.html  rebuild
vignettes/include/: filesampler.bib  header.html  lineSampler.bib
